<resources>
    <string name="app_name">NeoSTORE</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_acc">DONT HAVE AN ACCOUNT ?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms_cond"><![CDATA[I agree Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="are_you_sure">Are you sure !</string>
    <string name="do_you_want_to_close">do you want to close the app?</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="valid_email">Enter valid email</string>
    <string name="canot_be_empty">Cannot be empty</string>
    <string name="password_length">Password should be minimum six character</string>
    <string name="valid_phone_no">Enter valid phone number</string>
    <string name="pass_not_match">Password not matching</string>
    <string name="check_terms_cond">Please accept terms and condition</string>
    <string name="my_cart">My Cart</string>
    <string name="please_wait">Please wait</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tables">Tables</string>
    <string name="sofas">Sofas</string>
    <string name="chairs">Chairs</string>
    <string name="cupboards">Cupboards</string>
    <string name="my_account">My Account</string>
    <string name="store_locator">Store Locator</string>
    <string name="my_orders">My Orders</string>
    <string name="Logout">Logout</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="Description">description</string>
    <string name="buynow">buy now</string>
    <string name="rate">Rate</string>
    <string name="catagory">Catagory</string>
    <string name="ratenow">Rate now</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="submit">Submit</string>
    <string name="total">TOTAL</string>
    <string name="ordernow">order now</string>
    <string name="rs">\u20B9</string>
    <string name="alert">Alert</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="country">COUNTRY</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="add_address">Add Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="address_list">Address List</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="update_Profile">Update Profile</string>
    <string name="place_order">Place Order</string>
    <string name="orderid">Order ID</string>
    <string name="ordered_date">Ordered Date</string>
    <string name="no_connection">Internet connection appears to be offline</string>
    <string name="valid_zip">Enter valid zip code</string>
    <string name="empty_cart">No items in cart</string>
    <string name="api_key">AIzaSyDb23E4_O_N8Y1twVzc_h_86B2hmT-PPEk</string>
    <string name="profile_image_path">data:image/jpg;base64,</string>
    <string name="permission_grant">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="landmark">LANDMARK</string>
    <string name="india">INDIA</string>
    <string name="mumbai">MUMBAI</string>
    <string name="_413101">413101</string>
    <string name="maharashtra">MAHARASHTRA</string>
    <string name="empty_orders">No any orders</string>
    <string name="_2000">2000</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="getstore">getstore</string>
    <string name="choose_action">Choose Action</string>
    <string name="search">Search</string>
    <string name="search_here">Search product name</string>
    <string name="hello_user">NeoSoft</string>
    <string name="owner_name">John Sinha</string>
    <string name="search_order_id">Search Order Id</string>
</resources>