<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_red"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_red"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_back"
        android:layout_gravity="start|center_horizontal" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:fontFamily="@font/gothambold"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edt_txt_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />

    <EditText
        android:id="@+id/edt_txt_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_txt_first_name" />

    <EditText
        android:id="@+id/edt_txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_txt_last_name" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_txt_email" />

    <EditText
        android:id="@+id/ed_txt_con_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_con_pass">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothammedium"
            android:text="@string/male"
            android:buttonTint="@color/color_white"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothammedium"
            android:text="@string/female"
            android:buttonTint="@color/color_white"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:fontFamily="@font/gothammedium"
        android:padding="12dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_con_pass" />

    <EditText
        android:id="@+id/edt_txt_phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:maxLength="10"
        android:fontFamily="@font/gothammedium"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_terms_cond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gothammedium"
        android:padding="12dp"
        android:text="@string/terms_cond"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:button="@drawable/checkbox_custom"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_txt_phone_no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:fontFamily="@font/gothammedium"
        android:textColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_terms_cond" />

</androidx.constraintlayout.widget.ConstraintLayout>