<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_grey"
    tools:context=".activities.AddAddressActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_5sdp"
        android:text="@string/address"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittxt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/bg_edittxt_white"
        android:fontFamily="@font/gothambook"
        android:hint="@string/address"
        android:textSize="@dimen/_13ssp"
        android:inputType="textPersonName"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/color_black_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_5sdp"
        android:text="@string/city"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_address"
        android:layout_marginStart="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edttxt_landmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/bg_edittxt_white"
        android:fontFamily="@font/gothambook"
        android:hint="@string/landmark"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_5sdp"
        android:text="@string/city"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_landmark"
        android:layout_marginStart="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_5sdp"
        android:text="@string/state"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_landmark" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edttxt_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/bg_edittxt_white"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:hint="@string/mumbai"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/edttxt_state"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edttxt_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/bg_edittxt_white"
        android:maxLines="1"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_10sdp"
        android:hint="@string/maharashtra"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edttxt_city"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatEditText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:fontFamily="@font/gothammedium"
        android:text="@string/zip_code"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toStartOf="@+id/appCompatEditText6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_city"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatEditText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fontFamily="@font/gothammedium"
        android:text="@string/country"
        android:textColor="@color/color_black_dark"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatEditText7"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_state" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edttxt_zip_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_edittxt_white"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/color_black_dark"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:hint="@string/_413101"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toStartOf="@+id/edttxt_country"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText7" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edttxt_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:background="@drawable/bg_edittxt_white"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="@string/india"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/edttxt_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/edttxt_country"
        app:layout_constraintStart_toStartOf="@+id/edttxt_zip_code"
        android:layout_marginTop="@dimen/_24sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/bg_button_buynow"
        android:textColor="@color/color_white"
        android:text="@string/save_address"
        android:textAllCaps="true"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_zip_code" />
</androidx.constraintlayout.widget.ConstraintLayout>