<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_red"
    tools:context=".activities.LoginActivity">
    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginLeft="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_100sdp"
        android:layout_marginRight="@dimen/_100sdp"
        android:fontFamily="@font/gothambold"
        android:padding="@dimen/_12sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_45ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_txt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_48sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_username"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/user_name"
        android:textSize="@dimen/_18ssp"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />

    <EditText
        android:id="@+id/edt_txt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:textSize="@dimen/_18ssp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_8sdp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/color_red"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_txt_password" />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22sdp"
        android:fontFamily="@font/gothammedium"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintStart_toStartOf="@+id/txt_app_name"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_dnt_hav_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_172sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/gothammedium"
        android:padding="@dimen/_8sdp"
        android:textSize="@dimen/_15ssp"
        android:text="@string/dont_have_acc"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
        app:layout_constraintEnd_toStartOf="@+id/fab_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/color_red_dark"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_dnt_hav_acc"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fabshape" />
</androidx.constraintlayout.widget.ConstraintLayout>